<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/name"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:textSize="@dimen/titles_size"
        android:textStyle="bold"
        android:text="@string/profile_addmedicine_name"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/name_edit"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:ems="10"
        android:inputType="textNoSuggestions"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/name" />

    <TextView
        android:id="@+id/take"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="26dp"
        android:textSize="@dimen/titles_size"
        android:textStyle="bold"
        android:text="@string/profile_addmedicine_assumption"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/name_edit" />

    <RadioGroup
        android:id="@+id/radioGroup_take"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/take">

        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/profile_addmedicine_assumption_1"
            android:textSize="@dimen/normal_size"
            android:textStyle="normal" />

        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/profile_addmedicine_assumption_2"
            android:textSize="@dimen/normal_size"
            android:textStyle="normal" />

        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/profile_addmedicine_assumption_3"
            android:textSize="@dimen/normal_size"
            android:textStyle="normal" />

        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/profile_addmedicine_assumption_4"
            android:textSize="@dimen/normal_size"
            android:textStyle="normal" />

        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/profile_addmedicine_assumption_5"
            android:textSize="@dimen/normal_size"
            android:textStyle="normal" />
    </RadioGroup>

    <EditText
        android:id="@+id/altro_edit"
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        app:layout_constraintLeft_toRightOf="@id/radioGroup_take"
        app:layout_constraintBottom_toBottomOf="@id/radioGroup_take"
        android:visibility="invisible"
        android:paddingStart="8dp" />

    <TextView
        android:id="@+id/type"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="26dp"
        android:textSize="@dimen/titles_size"
        android:textStyle="bold"
        android:text="@string/profile_addmedicine_type"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/radioGroup_take" />

    <RadioGroup
        android:id="@+id/radioGroup_type"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/type">

        <RadioButton
            android:id="@+id/type1"
            android:layout_height="@dimen/image_big"
            style="@style/tipology"
            android:background="@drawable/type1"
            android:button="@null"
            android:checked="true"
            android:scaleType="fitCenter"
            app:layout_constraintBottom_toTopOf="@+id/textView"
            app:layout_constraintEnd_toStartOf="@+id/type2"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/type" />

        <RadioButton
            android:id="@+id/type2"
            android:layout_height="@dimen/image_big"
            style="@style/tipology"
            android:background="@drawable/type2"
            android:button="@null"
            android:scaleType="centerCrop"
            app:layout_constraintBottom_toTopOf="@+id/textView2"
            app:layout_constraintEnd_toStartOf="@+id/type3"
            app:layout_constraintStart_toEndOf="@+id/type1"
            app:layout_constraintTop_toBottomOf="@+id/type" />

        <RadioButton
            android:id="@+id/type3"
            android:layout_height="@dimen/image_big"
            style="@style/tipology"
            android:background="@drawable/type3"
            android:button="@null"
            android:scaleType="centerCrop"
            app:layout_constraintBottom_toTopOf="@+id/textView3"
            app:layout_constraintEnd_toStartOf="@+id/type4"
            app:layout_constraintStart_toEndOf="@+id/type2"
            app:layout_constraintTop_toBottomOf="@+id/type" />

        <RadioButton
            android:id="@+id/type4"
            android:layout_height="@dimen/image_big"
            style="@style/tipology"
            android:background="@drawable/type4"
            android:button="@null"
            android:scaleType="centerCrop"
            app:layout_constraintBottom_toTopOf="@+id/textView4"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/type3"
            app:layout_constraintTop_toBottomOf="@+id/type" />

    </RadioGroup>

    <TextView
        android:id="@+id/textView"
        android:layout_height="wrap_content"
        style="@style/tipology"
        android:text="@string/profile_addmedicine_type_1"
        android:textSize="@dimen/details_size"
        android:textStyle="italic"
        app:layout_constraintEnd_toStartOf="@+id/textView2"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/radioGroup_type" />

    <TextView
        android:id="@+id/textView2"
        android:layout_height="wrap_content"
        style="@style/tipology"
        android:text="@string/profile_addmedicine_type_2"
        android:textSize="@dimen/details_size"
        android:textStyle="italic"
        app:layout_constraintEnd_toStartOf="@+id/textView3"
        app:layout_constraintStart_toEndOf="@+id/textView"
        app:layout_constraintTop_toBottomOf="@+id/radioGroup_type" />

    <TextView
        android:id="@+id/textView3"
        android:layout_height="wrap_content"
        style="@style/tipology"
        android:text="@string/profile_addmedicine_type_3"
        android:textSize="@dimen/details_size"
        android:textStyle="italic"
        app:layout_constraintEnd_toStartOf="@+id/textView4"
        app:layout_constraintStart_toEndOf="@+id/textView2"
        app:layout_constraintTop_toBottomOf="@+id/radioGroup_type" />

    <TextView
        android:id="@+id/textView4"
        android:layout_height="wrap_content"
        style="@style/tipology"
        android:text="@string/profile_addmedicine_type_4"
        android:textSize="@dimen/details_size"
        android:textStyle="italic"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/textView3"
        app:layout_constraintTop_toBottomOf="@+id/radioGroup_type" />

    <Button
        android:id="@+id/finish"
        style="@style/lastButton"
        android:layout_marginTop="8dp"
        android:text="@string/next"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView9" />

    <TextView
        android:id="@+id/textView9"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="12dp"
        android:text="@string/profile_addmedicine_type_details"
        android:textColor="@color/colorPrimary"
        android:textSize="@dimen/details_size"
        android:textStyle="italic"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView" />


</android.support.constraint.ConstraintLayout>