<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/alarm_dispenser"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:textSize="@dimen/titles_size"
        android:textStyle="bold"
        android:text="@string/home_program_addprogram_alarm_numadispenser_title"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <RadioButton
        android:id="@+id/sound_dispenser"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:textSize="@dimen/normal_size"
        android:textStyle="normal"
        android:text="@string/home_program_addprogram_alarm_sound"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/alarm_dispenser" />

    <RadioButton
        android:id="@+id/vib_dispenser"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:textSize="@dimen/normal_size"
        android:textStyle="normal"
        android:text="@string/home_program_addprogram_alarm_lightness"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/sound_dispenser" />

    <TextView
        android:id="@+id/alarm_wearable"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="@dimen/block_size"
        android:textSize="@dimen/titles_size"
        android:textStyle="bold"
        android:text="@string/home_program_addprogram_alarm_numawearable_title"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/vib_dispenser" />

    <Switch
        android:id="@+id/alarm_enable_wearable"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:textSize="@dimen/normal_size"
        android:textStyle="normal"
        android:text="@string/home_program_addprogram_alarm_numawearable_on"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/alarm_wearable" />

    <RadioButton
        android:id="@+id/sound_wearable"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:textSize="@dimen/normal_size"
        android:textStyle="normal"
        android:text="@string/home_program_addprogram_alarm_sound"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/alarm_enable_wearable" />

    <RadioButton
        android:id="@+id/vib_wearable"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:textSize="@dimen/normal_size"
        android:textStyle="normal"
        android:text="@string/home_program_addprogram_alarm_lightness"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/sound_wearable" />

    <Button
        android:id="@+id/del"
        style="@style/lastButton"
        android:text="@string/delete"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/vib_wearable" />

    <Button
        android:id="@+id/finish"
        style="@style/lastButton"
        android:text="@string/finish"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/vib_wearable" />
</android.support.constraint.ConstraintLayout>