<?xml version="1.0" encoding="utf-8"?>
<!--
  ~ Created by passwd <passwd@mes3hacklab.org> on 2018
  ~ Copyright (c) 2018-2020. All rights reserved.
  ~ Last modified 7/24/18 4:11 PM
  -->

<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/wearable_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:textSize="@dimen/titles_size"
        android:textStyle="bold"
        android:text="@string/settings_numawearable_title"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/wearable"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:text="@string/settings_numawearable_management"
        android:clickable="true"
        android:focusable="true"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/wearable_title" />

    <TextView
        android:id="@+id/dispenser_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="@dimen/titles_size"
        android:textStyle="bold"
        android:layout_marginStart="8dp"
        android:layout_marginTop="@dimen/block_size"
        android:text="@string/settings_numadispenser_title"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/wearable" />

    <TextView
        android:id="@+id/dispenser"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:clickable="true"
        android:focusable="true"
        android:text="@string/settings_numadispenser_management"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/dispenser_title" />

</android.support.constraint.ConstraintLayout>